src/objects/Technical_Assessment__c.object
<CustomObject>
    <description>Designed to store technical assessment for the Customer Relation Technical Case.</description>
    <fields>
        <fullName>Affected_Part__c</fullName>
        <formula>Technical_Symptoms_Search__r.Affected_Part__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affected Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Vehicle__c</fullName>
        <formula>Technical_Symptoms_Search__r.Area_of_Vehicle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area of Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Technical Assessments</relationshipLabel>
        <relationshipName>Technical_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_s_Disposition__c</fullName>
        <label>Customer&apos;s Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Field_FE_Requested__c</fullName>
        <label>Date Field FE Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inspection_Scheduled__c</fullName>
        <label>Date Inspection Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Dealer: Account Record Type: Record Type Name</inlineHelpText>
        <label>Dealer Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Dealer contact.</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer_Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Technical Assessments</relationshipLabel>
        <relationshipName>Technical_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Notified_Date__c</fullName>
        <label>Dealer Notified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technical Assessments</relationshipLabel>
        <relationshipName>Technical_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Date__c</fullName>
        <label>Diagnosis Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FE_Report_No__c</fullName>
        <label>FE Report #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_Specialist_Assigned__c</fullName>
        <label>FE Specialist Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Mike Menard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Arsenault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martin Creasey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shawn Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michel Cuillerier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michel Aubin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthony Gray</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Complete_Date__c</fullName>
        <label>Inspection Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Magic_Ticket__c</fullName>
        <label>Magic Ticket #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Aftermarket Repair/Service Induced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop Repair Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Did Not Understand Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Induced - Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Induced - Not Maintained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Repair/Service Induced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Induced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Follow Repair Instruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Follow Service Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Environment Induced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OE Parts Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall Part Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services Bulletin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Altered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Disability Modified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Modified Performance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <label>Technical Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Technical_Symptoms_Search__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Technical Symptoms Search</label>
        <referenceTo>Technical_Issue__c</referenceTo>
        <relationshipLabel>Technical Assessments</relationshipLabel>
        <relationshipName>Technical_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Technical Assessment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Assessments</pluralLabel>
    <recordTypes>
        <fullName>CR_Tech</fullName>
        <active>true</active>
        <label>CR Tech</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Field_Engineering</fullName>
        <active>true</active>
        <label>Field Engineering</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Line</fullName>
        <active>true</active>
        <label>Tech Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>